--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -5,4 +5,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context="org.meimen.meimen.activity.ExerciseActivity" />
+    tools:context=".ui.activity.ExerciseActivity" />
