--- a/app/src/main/res/layout/fragment_exercise_select.xml
+++ b/app/src/main/res/layout/fragment_exercise_select.xml
@@ -77,7 +77,7 @@
             android:textSize="@dimen/text_size_10" />
 
 
-        <org.meimen.meimen.ui.LineChartView
+        <org.meimen.meimen.ui.view.LineChartView
             android:id="@+id/lcv_record"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
